--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "electron-updater": "^6.1.0"
   },
   "devDependencies": {
